--- a/style.css
+++ b/style.css
@@ -24,6 +24,20 @@
         font-size: 25px;
     }
 
+    .footer-color{
+        background-color: rgba(0, 183, 255, 0.774);
+        min-height: 145px;
+    }
+
+    .footer-space{
+        justify-content: space-between;
+    }
+
+    #footer{
+    bottom: 0;
+    width: 100%;
+    }
+
     nav{
         background: rgba(0, 183, 255, 0.774);
     }
@@ -123,28 +137,39 @@
         margin-top: 100px;
     }
 
-    .footer-color{
+
+
+    .about-image-shape{
+        border-radius: 50%;
+        margin-top: 55px;
+    }
+    
+    .about-text{
+        font-size: 30px;
+        margin-bottom: 100px;
+        margin-top: 50px;
+    }
+
+    .button-style{
         background-color: rgba(0, 183, 255, 0.774);
-        min-height: 145px;
+        margin-bottom: 125px;
+        margin-left: 45px; 
     }
 
-    .footer-space{
-        justify-content: space-between;
-    }
+    button:hover{
+        animation-name: background-color;
+        animation-duration: 500ms;
+        animation-fill-mode: forwards;
+        }
 
-    #footer{
-    bottom: 0;
-    width: 100%;
-    }
+        @keyframes background-color{
+            100% {
+           background-color:rgba(174, 160, 255);
+             }
+          }
+        }
 
-    @keyframes background-color{
-      100% {
-     background-color:rgba(174, 160, 255);
-       }
 
-  }
-
-}
 
 @media screen and (min-width: 280px) and (max-width: 577px){
 
@@ -168,9 +193,23 @@
 }
 
 .font-footer-call{
-    font-size: 16px;
+    font-size: 12px;
 }
 
+.footer-color{
+    background-color: rgba(0, 183, 255, 0.774);
+    
+}
+
+.footer-space{
+    justify-content: space-between;
+}
+
+#footer{
+    position: bottom;
+    bottom: 0;
+    width: 100%;
+}
 nav{
       background: rgba(0, 183, 255, 0.774);
 }
@@ -275,21 +314,31 @@ margin-left: 65%;
     margin-top: 75px;
 }
 
-.footer-color{
+
+
+.about-image-shape{
+    border-radius: 50%;
+    max-width: 310px;
+    margin-top: 20px;
+}
+
+.about-text{
+    font-size: 20px;
+    margin-bottom: 55px;
+    margin-top: 25px;
+}
+
+.button-style{
     background-color: rgba(0, 183, 255, 0.774);
-    
+    margin-bottom: 20%;
+    margin-left: 4%;
 }
 
-.footer-space{
-    justify-content: space-between;
-}
-
-#footer{
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
+button:hover{
+    animation-name: background-color;
+    animation-duration: 500ms;
+    animation-fill-mode: forwards;
+    }
 
   @keyframes background-color{
     100% {
