--- a/style.css
+++ b/style.css
@@ -121,11 +121,10 @@
     }
 
     .pet-Icon{
-    justify-content: space-between;
-    border-radius: 100px;
+    border-radius: 50%;
     min-height: 200px;
     max-width: 200px;
-    padding: 35px;
+    padding: 15px;
     }
 
     .pet-Icon-row2-margin{
@@ -193,7 +192,7 @@
 }
 
 .font-footer-call{
-    font-size: 12px;
+    font-size: 10px;
 }
 
 .footer-color{
@@ -209,6 +208,8 @@
     position: bottom;
     bottom: 0;
     width: 100%;
+    margin-top: 160px;
+    height: 70px;
 }
 nav{
       background: rgba(0, 183, 255, 0.774);
@@ -254,40 +255,39 @@ nav{
 
 .slide-show-render-full .slide-image {
   
-      max-height: 55%;
-      max-width: 80%;
+      height: 10%;
+      width: 80%;
      text-align: center;
 }
       
 .slide-show-render-full .slide-content {
-      height: 55%;
+      height: 10%;
       width: 80%;
       text-align: center;
 }
       
 .slide-show-render .slides {
-      height: 55%;
-      max-width: 80%;
+      height: 10%;
+      width: 80%;
       text-align: center;
 }
       
 .slide-show-render.slide-show {
-      height: 55%;
-      max-width: 80%;
+      height: 10%;
+      width: 80%;
       text-align: center;
-     
 }
       
 .slide-show {
       width: 85%; 
-      max-height: 55%;
+      height: 10%;
       text-align: center;
      
 }
 
-  .carousel-control-prev{
-    background: rgba(0, 183, 255, 0.774);
-  max-width: 100px;
+.carousel-control-prev{
+background: rgba(0, 183, 255, 0.774);
+max-width: 100px;
   
 }
 
@@ -313,8 +313,6 @@ margin-left: 65%;
 .pet-Icon-row1-margin{
     margin-top: 75px;
 }
-
-
 
 .about-image-shape{
     border-radius: 50%;
