--- a/style.css
+++ b/style.css
@@ -175,6 +175,15 @@
             padding: 15px;
         }
 
+        .store-padding{
+            padding: 40px;
+        }
+
+        .store-image{
+            max-width: 350px;
+            max-height: 350px;
+        }
+
         @keyframes background-color{
             100% {
            background-color:rgba(174, 160, 255);
@@ -370,7 +379,14 @@ button:hover{
     
 }
 
+.store-padding{
+    padding: 15px;
+}
 
+.store-image{
+    max-width: 100px;
+    max-height: 100px;
+}
 
   @keyframes background-color{
     100% {
