--- a/style.css
+++ b/style.css
@@ -134,18 +134,20 @@
     min-height: 200px;
     max-width: 200px;
     padding: 15px;
+    margin-top: 150px;
     }
 
     .pet-Icon-row2-margin{
-        margin-bottom: 100px;
+        margin-bottom: 150px;
     }
 
     .center-Icons{
-        margin-left: 475px;
-        margin-top: 100px;
+    justify-content: center;
     }
 
-
+    .carousel-margin-top{
+        margin-top: 80px;
+    }
 
     .about-image-shape{
         border-radius: 50%;
@@ -224,7 +226,7 @@
 }
 
 .footer-space{
-    justify-content: space-between;
+    justify-content:space-evenly;
 }
 
 #footer{
@@ -331,9 +333,9 @@ max-width: 100px;
 border-radius: 50%;
 min-height: 50px;
 max-width: 50px;
-justify-content:space-between;
-margin-left: 25px;
 margin-bottom: 25px;
+padding: 3px;
+justify-content: space-evenly;
    }
 
 .pet-Icon-row2-margin{
@@ -344,6 +346,9 @@ margin-bottom: 25px;
     margin-top: 75px;
 }
 
+.div-row{
+    justify-content: center;
+}
 .about-image-shape{
     border-radius: 50%;
     max-width: 310px;
